added mysql info at properties file

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -4,3 +4,8 @@ spring.datasource.username = sa
 spring.datasource.password =
 spring.h2.console.path = /h2-console
 spring.jpa.hibernate.ddl-auto = create-drop
+
+spring.sql.init.mode=always
+spring.datasource.initialization-mode=always
+
+spring.jpa.defer-datasource-initialization=true
