--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name = PersonProject
 server.port = 8081
 
-spring.profiles.active = dev
-#spring.profiles.active = prod
+#spring.profiles.active = dev
+spring.profiles.active = prod
+
+spring.jpa.defer-datasource-initialization=true
